Device, Cluster CURD api endpoints
