# pronto-hubble/api/v1/spec/swagger.yml
@@ -15,8 +15,295 @@ basePath: /pronto/v1
 definitions:
   user:
     $ref: './user.yml#/definitions/user'
+  device:
+    $ref: './device.yml#/definitions/device'
+  cluster:
+    $ref: './cluster.yml#/definitions/cluster'
+  deviceIds:
+    $ref: './cluster.yml#/definitions/deviceIds'
 paths:
+  /devices:
+    get:
+      tags: ['devices']
+      operationId: listDevices
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/device"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+    post:
+      tags: ['devices']
+      operationId: createDevice
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/device"
+      responses:
+        '201':
+          description: Created
+          schema:
+            $ref: './common.yml#/id'
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+
+  /devices/{id}:
+    parameters:
+      - type: string
+        name: id
+        in: path
+        required: true
+    get:
+      tags: ['devices']
+      operationId: getDevice
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/device"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+    put:
+      tags: ['devices']
+      operationId: updateDevice
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/device"
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/device"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+    delete:
+      tags: ['devices']
+      operationId: deleteDevice
+      responses:
+        '204':
+          description: Deleted
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+
+  /clusters:
+    get:
+      tags: ['clusters']
+      operationId: listClusters
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/cluster"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+    post:
+      tags: ['clusters']
+      operationId: createCluster
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/cluster"
+      responses:
+        '201':
+          description: Created
+          schema:
+            $ref: './common.yml#/id'
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+
+  /clusters/{id}:
+    parameters:
+      - type: string
+        name: id
+        in: path
+        required: true
+    get:
+      tags: ['clusters']
+      operationId: getCluster
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/cluster"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+    put:
+      tags: ['clusters']
+      operationId: updateCluster
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/cluster"
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/cluster"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+    delete:
+      tags: ['clusters']
+      operationId: deleteCluster
+      responses:
+        '204':
+          description: Deleted
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+
+  /clusters/{id}/join:
+    parameters:
+      - type: string
+        name: id
+        in: path
+        required: true
+    put:
+      tags: ['clusters']
+      operationId: join
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/deviceIds"
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/cluster"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+
+  /clusters/{id}/leave:
+    parameters:
+      - type: string
+        name: id
+        in: path
+        required: true
+    put:
+      tags: ['clusters']
+      operationId: leave
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/deviceIds"
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/cluster"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+
   /users:
-    $ref: './user.yml#/paths/~1users'
+    get:
+      tags: ['users']
+      operationId: listUsers
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/user"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+    post:
+      tags: ['users']
+      operationId: createUser
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/user"
+      responses:
+        '201':
+          description: Created
+          schema:
+            $ref: './common.yml#/id'
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+
   /users/{id}:
-    $ref: './user.yml#/paths/~1users~1{id}'
+    parameters:
+      - type: string
+        name: id
+        in: path
+        required: true
+    get:
+      tags: ['users']
+      operationId: getUser
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/user"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+    put:
+      tags: ['users']
+      operationId: updateUser
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/user"
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: "#/definitions/user"
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+    delete:
+      tags: ['users']
+      operationId: deleteUser
+      responses:
+        '204':
+          description: Deleted
+        default:
+          description: error
+          schema:
+            $ref: './common.yml#/error'
+
